# UDA

./: .gitignore  CMakeLists.txt  README.md
extlib/: CMakeLists.txt
source/: CMakeLists.txt
source/client/: accAPI.cpp  clientXDRStream.cpp  connection.h
source/client2/: client.cpp  client_xdr_stream.cpp
source/clientserver/: protocolXML.cpp  protocolXML2.cpp  stringUtils.h
source/plugins/testplugin/: testplugin.h
source/plugins/uda/: uda_plugin.h
source/plugins/viewport/: viewport.h
source/server/: createXDRStream.cpp  fatServer.cpp  initPluginList.cpp  serverStartup.cpp  serverSubsetData.cpp
source/server2/: server.cpp  server_plugin.cpp  xdr_protocol.cpp
source/wrappers/c++/: structdata.hpp
source/wrappers/python/: CMakeLists.txt  configure_setup.cmake  setup.py.in
source/wrappers/python/pyuda/: _client.py
